--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -49,3 +49,6 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+
+env:
+  VITE_APP_ENV: ${{ secrets.APP_ENV }}
